--- a/interesting.html
+++ b/interesting.html
@@ -6,7 +6,7 @@
         <title>Things to do!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Styles/styles3Copy.css">
+        <link rel="stylesheet" href="Styles/styles4.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
 />
     </head>
@@ -88,6 +88,8 @@
                 and then into the Joyful Circus, where everyone is always laughing, no matter what. Then, after cooling off with a shower during the middle of the day, head into the Sci-Fi land, to ride
                 the 1000ft rollercoaster, and into the "zero-gravity" loop, where physics are said to be defied. Catch a photo of the satellite mid-air to stand a chance to win exciting prizes!
                 Finally, to end off your day, go towards the Refurbishments of the Wanderers to satiate your famished appetite!
+
+                <img src="Images/food1.jpg"
                 
             </p>
 
