--- a/interesting.html
+++ b/interesting.html
@@ -15,7 +15,7 @@
     
         <div class="gallery">
             <div>
-                <img src="Images/Logo.jpg" class="logo">
+                <a href="/main.html"><img src="Images/Logo.jpg" class="logo"></a>
             </div>
     </div>
 
