--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
         <div class="gallery">
                 <div>
-                    <a href="/main.html"><img src="/Images/Logo.jpg" class="logo"></a>
+                    <a href="/main.html"><img src="Images/Logo.jpg" class="logo"></a>
                 </div>
         </div>
 
@@ -41,7 +41,7 @@
 
             <div class="box_container">
                 <div class="box">
-                    <img src="/Images/Aztec_land.jpg" class="boximages">
+                    <img src="Images/Aztec_land.jpg" class="boximages">
                     <h2 class="boxheader"><b>EL DORADO</b></h2>
                     <p class="boxpara">
                         Lorem ipsum dolor sit amet, 
@@ -62,7 +62,7 @@
                 </div>
                 
                 <div class="box">
-                    <img src="/Images/Eastern_lands.jpg" class="boximages">
+                    <img src="Images/Eastern_lands.jpg" class="boximages">
                     <h2 class="boxheader"><b>MIDDLE KINGDOM</b></h2>
                     <p class="boxpara">
                         Lorem ipsum dolor sit amet, 
@@ -85,7 +85,7 @@
 
             <div class="box_container">
                 <div class="box">
-                    <img src="/Images/Western_world.jpg" class="boximages">
+                    <img src="Images/Western_world.jpg" class="boximages">
                     <h2 class="boxheader"><b>THE NEW WEST</b></h2>
                     <p class="boxpara">
                         Lorem ipsum dolor sit amet, 
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="/Images/Fairy_land.jpg" class="boximages">
+                    <img src="Images/Fairy_land.jpg" class="boximages">
                     <h2 class="boxheader"><b>MARLIMAR</b></h2>
                     <p class="boxpara">
                         Lorem ipsum dolor sit amet, 
@@ -128,7 +128,7 @@
 
             <div class="box_container">
                 <div class="box">
-                    <img src="/Images/Space_theme_park.jpg" class="boximages">
+                    <img src="Images/Space_theme_park.jpg" class="boximages">
                     <h2 class="boxheader"><b>TERRA NOVA</b></h2>
                     <p class="boxpara">
                         Lorem ipsum dolor sit amet, 
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="/Images/Cyberpunk2.jpg" class="boximages">
+                    <img src="Images/Cyberpunk2.jpg" class="boximages">
                     <h2 class="boxheader"><b>FUSHIGAWA 2089</b></h2>
                     <p class="boxpara">
                         Lorem ipsum dolor sit amet, 
