--- a/buy_tickets.html
+++ b/buy_tickets.html
@@ -6,12 +6,12 @@
         <title>Package Info</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/Styles/styles2.css">
+        <link rel="stylesheet" href="Styles/styles2.css">
     </head>
     <body>
         <div class="gallery">
             <div>
-                <a href="/main.html"><img src="/Images/Logo.jpg" class="logo"></a>
+                <a href="/main.html"><img src="Images/Logo.jpg" class="logo"></a>
             </div>
         </div>
 
@@ -29,7 +29,7 @@
         </div>
 
         <div class="mainbox">
-            <img src="/Images/Fountain.jpg" alt="Fountain" style="width: 100%;">
+            <img src="Images/Fountain.jpg" alt="Fountain" style="width: 100%;">
             <div id="mainbox">
                 <h1 class="ticketheader">BUY YOUR TICKETS HERE</h1>
                 <p></p>
