--- a/FAQ.html
+++ b/FAQ.html
@@ -19,92 +19,49 @@
             <div>
                 <a href="/main.html"><img src="/Images/Logo.jpg" class="logo"></a>
             </div>
-    </div>
-
-    <div class="navigation_bar">
-        <header>
-            <nav>
-                <ul class="nav">
-                    <li id="navbox" class="selectednav"><a href="/main.html"><b>Home</b></a></li>
-                    <li id="navbox"><a href="/FAQ.html">Customer Service</a></li>
-                    <li id="navbox"><a href="/buy_tickets.html">Tickets & Promotions</a></li>
-                    <li id="navbox"><a href="/interesting.html">Things to do</a></li>
-                  </ul>
-            </nav>
-        </header>
-    </div>
-
-    <div class="mainbox">
-        <img src="/Images/bg2.jpg" style="width: 100%;">
-        <div id="mainbox">
-            <h1>SHOP FOR SOME MERCHANDISE</h1>
         </div>
-    </div>
 
-    <div class = "products">
-        <div class = "container2">
-        <div class = "c2-item"><img class = "MerchLogo" src="images/Merch.png"></div>
-        <div class = "c2-item"><img class="option2" src="images/Merch1.jpg"></div>
-        <div class = "c2-item"><img class="option2" src="images/Merch2.jpg"></div>
-        <div class = "c2-item"><img class="option2" src="images/Merch3.jpg"></div>
-        <div class = "c2-item"><img class="option2" src="images/Merch4.jpg"></div>
+        <div class="navigation_bar">
+            <header>
+                <nav>
+                    <ul class="nav">
+                        <li id="navbox" class="selectednav"><a href="/main.html"><b>Home</b></a></li>
+                        <li id="navbox"><a href="/FAQ.html">Customer Service</a></li>
+                        <li id="navbox"><a href="/buy_tickets.html">Tickets & Promotions</a></li>
+                        <li id="navbox"><a href="/interesting.html">Things to do</a></li>
+                    </ul>
+                </nav>
+            </header>
         </div>
-    </div>
 
-    <div class="big_container_grid">
-        <div class="Package">
-            <div class="headerbox">
-                <h5 class="packageheader">Regular</h5>
-                <div class="boxbutton">
-                    <h6 class="boxheader">BUY FOR $18.00</h6>
-                </div>
-            </div>
-            <div class="x">
-                <ul class="benefits">
-                    <li id="listfont">The Standard Package</li>
-                    <li id="listfont">Access to all rides</li>
-                    <li id="listfont">No Fastpass</li>
-                    <li id="listfont">No free shuttle to park</li>
-                    <li id="listfont">No Discounts</li>
-                </ul>
+        <div class="mainbox">
+            <img src="/Images/bg2.jpg" style="width: 100%;">
+            <div id="mainbox">
+                <h1>SHOP FOR SOME MERCHANDISE</h1>
             </div>
         </div>
 
-        <div class="Package">
-            <div class="headerbox">
-                <h5 class="packageheader">Premium</h5>
-                <div class="boxbutton">
-                    <h6 class="boxheader">BUY FOR $40.00</h6>
-                </div>
-            </div>
-            <div class="x">
-                <ul class="benefits">
-                    <li id="listfont">Access to Fastpass for limited rides</li>
-                    <li id="listfont">No discount on merchandise</li>
-                    <li id="listfont">5% discount for food</li>
-                    <li id="listfont">No free shuttle to park</li>
-                    <li id="listfont">Recieve a free merchandise of your choosing upon entering the</li>
-                </ul>
+        <div class = "products">
+            <div class = "container2">
+            <div class = "c2-item1"><img class = "MerchLogo" src="images/Merch.png"></div>
+            <div class = "c2-item2"><img class="option2" src="images/Merch1.jpg"></div>
+            <div class = "c2-item2"><img class="option2">Totoro Mug</div>
+            <div class = "c2-item3"><img class="option2" src="images/Merch2.jpg"></div>
+            <div class = "c2-item3"><img class="option2">T-shirt Mug</div>
+            <div class = "c2-item4"><img class="option2" src="images/Merch3.jpg"></div>
+            <div class = "c2-item4"><img class="option2">T-shirt Mug</div>
+            <div class = "c2-item5"><img class="option2" src="images/Merch4.jpg"></div>
+            <div class = "c2-item5"><img class="option2">T-shirt Mug</div>
             </div>
         </div>
-        <div class="Package">
-            <div class="headerbox">
-                <h5 class="packageheader">Premium+</h5>
-                <div class="boxbutton">
-                    <h6 class="boxheader">BUY FOR $100.00</h6>
-                </div>
+
+        
+        <div class = "mainbox">
+            <img src="/Images/bg2.jpg" style="width: 100%;">
+            <div id="mapbox">
+                <h1>Find us here!</h1>
             </div>
-            <div class="x">
-                <ul class="benefits">
-                    <li id="listfont">Guaranteed photos with mascots</li>
-                    <li id="listfont">Free shuttle to the park</li>
-                    <li id="listfont">Fastpass to all rides</li>
-                    <li id="listfont">Get a 5-star hotel pre-booked for you</li>
-                    <li id="listfont">20% discount on all merchandise AND food</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+        <div class = ""><img class = "" src="images/Location.png"></div>
     
     </body>
 </html>
