--- a/main.html
+++ b/main.html
@@ -11,6 +11,13 @@
     
     <body>
 
+        <style>
+            body{
+
+                background-image: url(Images/Fireworks1.jpg);
+            }
+        </style>
+
         <div class="gallery">
                 <div>
                     <a href="/main.html"><img src="Images/Logo.jpg" class="logo"></a>
