--- a/interesting.html
+++ b/interesting.html
@@ -42,7 +42,7 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide"><img src="Images/Aztec_land.jpg" alt=""></div>
                   <div class="swiper-slide"><img src="Images/jungle_lands.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="IMages/sci-fi.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="Images/sci-fi.jpg" alt=""></div>
                   ...
                 </div>
                 <!-- If we need pagination -->
