--- a/FAQ.html
+++ b/FAQ.html
@@ -41,27 +41,50 @@
             </div>
         </div>
 
-        <div class = "products">
-            <div class = "container2">
+        <div class = "container2">
             <div class = "c2-item1"><img class = "MerchLogo" src="images/Merch.png"></div>
             <div class = "c2-item2"><img class="option2" src="images/Merch1.jpg"></div>
             <div class = "c2-item2"><img class="option2">Totoro Mug</div>
             <div class = "c2-item3"><img class="option2" src="images/Merch2.jpg"></div>
-            <div class = "c2-item3"><img class="option2">T-shirt Mug</div>
+            <div class = "c2-item3"><img class="option2">T-shirt</div>
             <div class = "c2-item4"><img class="option2" src="images/Merch3.jpg"></div>
-            <div class = "c2-item4"><img class="option2">T-shirt Mug</div>
+            <div class = "c2-item4"><img class="option2">3D Calender</div>
             <div class = "c2-item5"><img class="option2" src="images/Merch4.jpg"></div>
-            <div class = "c2-item5"><img class="option2">T-shirt Mug</div>
-            </div>
+            <div class = "c2-item5"><img class="option2">Cat Plushy</div>
         </div>
 
+
         
-        <div class = "mainbox">
-            <img src="/Images/bg2.jpg" style="width: 100%;">
-            <div id="mapbox">
-                <h1>Find us here!</h1>
+        <div class = "container3">
+            <!-- <div class = "c3-item"><img src="/Images/bg2.jpg" style="width: 100%;"></div> -->
+            <div class="c3-item1"><h1>Find us here!</h1><br><h4>v</h4></div>
+            <div class="c3-item2"><h3>F&Qs</h3>
+                <p>
+                    <ol>
+                        <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
+                        <br>
+                        <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
+                        <br>
+                        <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
+                        <br>
+                        <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
+                    </ol>
+                </p>
             </div>
-        <div class = ""><img class = "" src="images/Location.png"></div>
-    
+            <div class="c3-item3"><img class = "location" src="images/Location.png"></div>
+            <div class="c3-item4"><h3>Reviews</h3>
+                <p>
+                    <ol>
+                        <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
+                        <br>
+                        <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
+                        <br>
+                        <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
+                        <br>
+                        <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
+                    </ol>
+                </p>
+            </div>
+        </div>
     </body>
 </html>
