--- a/FAQ.html
+++ b/FAQ.html
@@ -69,6 +69,10 @@
                         <br>
                         <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
                     </ol>
+
+                    <label for="newQ">Ask your questions here:</label><br>
+                    <input type = "text" id="newQ" name="newQ">
+                    <button type="submit" >Submit</button> 
                 </p>
             </div>
             <div class="c3-item3"><img class = "location" src="images/Location.png"></div>
@@ -83,8 +87,16 @@
                         <br>
                         <li id="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</li>
                     </ol>
+
+                    <label for="newReviews">Write your reviews here:</label><br>
+                    <input type = "text" id="newReviews" name="newReviews">
+                    <button type="submit" >Submit</button> 
                 </p>
             </div>
+
+            <footer>
+                <button class="learnmore" type="button" ><strong>Learn More</strong></button>
+            </footer>
         </div>
     </body>
 </html>
