--- a/FAQ.html
+++ b/FAQ.html
@@ -95,7 +95,13 @@
             </div>
 
             <footer>
-                <button class="learnmore" type="button" ><strong>Learn More</strong></button>
+                <button class="learnmore" type="button" ><strong>Learn More</strong></button><br>
+                <h2 class="credit">
+                    <strong>Author: Chen Hsin Yu </strong><br>
+                    <small>&copy; <strong>Copyright</strong> <em>Photo: Deviant Art; Map: Ghibli Museum;</em> </small>
+    
+                </h2>
+                
             </footer>
         </div>
     </body>
