--- a/main.html
+++ b/main.html
@@ -178,5 +178,17 @@
         </div>
 
         <script src="" async defer></script>
+
+        <br>
+        <br>
+        <footer>
+            <h2>
+                <strong>Author: Abat Kurt Louie Galvez </strong><br>
+                <small>&copy; <strong>Copyright</strong> <em>Photo:Planet coaster</em> </small>
+
+            </h2>
+          </footer>
+        <br>
+        <br>
     </body>
 </html>
