--- a/buy_tickets.html
+++ b/buy_tickets.html
@@ -97,5 +97,17 @@
             </div>
         </div>
         <script src="" async defer></script>
+
+        <br>
+        <br>
+        <footer>
+            <h2>
+                <strong>Author: Abat Kurt Louie Galvez </strong><br>
+                <small>&copy; <strong>Copyright</strong> <em>Photo:Planet coaster</em> </small>
+
+            </h2>
+          </footer>
+        <br>
+        <br>
     </body>
 </html>
