--- a/buy_tickets.html
+++ b/buy_tickets.html
@@ -102,7 +102,7 @@
         <br>
         <footer>
             <h2>
-                <strong>Author: Abat Kurt Louie Galvez </strong><br>
+                <strong>Author: Charles Philip Edison V. Aplacador </strong><br>
                 <small>&copy; <strong>Copyright</strong> <em>Photo:Planet coaster</em> </small>
 
             </h2>
