--- a/interesting.html
+++ b/interesting.html
@@ -117,7 +117,7 @@
 
           <footer>
             <h2>
-                <strong>Author: Charles Philip Edison V. Aplacador </strong><br>
+                <strong>Author: Abat Kurt Louie Galvez </strong><br>
                 <small>&copy; <strong>Copyright</strong> <em>Photo: alamy;  Map: icogram;</em> </small>
 
             </h2>
