--- a/FAQ.html
+++ b/FAQ.html
@@ -42,14 +42,14 @@
         </div>
 
         <div class = "container2">
-            <div class = "c2-item1"><img class = "MerchLogo" src="images/Merch.png"></div>
-            <div class = "c2-item2"><img class="option2" src="images/Merch1.jpg"></div>
+            <div class = "c2-item1"><img class = "MerchLogo" src="Images/Merch.png"></div>
+            <div class = "c2-item2"><img class="option2" src="Images/Merch1.jpg"></div>
             <div class = "c2-item2"><img class="option2">Totoro Mug</div>
-            <div class = "c2-item3"><img class="option2" src="images/Merch2.jpg"></div>
+            <div class = "c2-item3"><img class="option2" src="Images/Merch2.jpg"></div>
             <div class = "c2-item3"><img class="option2">T-shirt</div>
-            <div class = "c2-item4"><img class="option2" src="images/Merch3.jpg"></div>
+            <div class = "c2-item4"><img class="option2" src="Images/Merch3.jpg"></div>
             <div class = "c2-item4"><img class="option2">3D Calender</div>
-            <div class = "c2-item5"><img class="option2" src="images/Merch4.jpg"></div>
+            <div class = "c2-item5"><img class="option2" src="Images/Merch4.jpg"></div>
             <div class = "c2-item5"><img class="option2">Cat Plushy</div>
         </div>
 
@@ -75,7 +75,7 @@
                     <button type="submit" >Submit</button> 
                 </p>
             </div>
-            <div class="c3-item3"><img class = "location" src="images/Location.png"></div>
+            <div class="c3-item3"><img class = "location" src="Images/Location.png"></div>
             <div class="c3-item4"><h3>Reviews</h3>
                 <p>
                     <ol>
